--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
             <h1><i class="fas fa-calculator"></i> Premium Age Calculator</h1>
         </div>
         <div class="horizontal-ad">
-            <div class="ad-placeholder">Advertisement</div>
+            <div class="ad-placeholder">
+                <script type="text/javascript">
+	atOptions = {
+		'key' : '5de55c6cd974701786e6b8adb04a6d40',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/5de55c6cd974701786e6b8adb04a6d40/invoke.js"></script>
+            </div>
         </div>
     </header>
 
