--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
     <div class="main-container">
         <!-- Left sidebar ad -->
         <aside class="sidebar left-sidebar">
-            <div class="ad-placeholder">Advertisement</div>
+            <div>
+		    <script type="text/javascript">
+	atOptions = {
+		'key' : 'a8db9a48ef68395e04c296a9b67c9009',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/a8db9a48ef68395e04c296a9b67c9009/invoke.js"></script>
+	    </div>
         </aside>
 
         <!-- Main content -->
@@ -70,11 +81,23 @@
 
         <!-- Right sidebar ad -->
         <aside class="sidebar right-sidebar">
-            <div class="ad-placeholder">Advertisement</div>
+            <div>
+		    <script type="text/javascript">
+	atOptions = {
+		'key' : '9efa4c541d27386496e003af64e01086',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9efa4c541d27386496e003af64e01086/invoke.js"></script>
+	    </div>
         </aside>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="script.js"></script>
+<script type='text/javascript' src='//pl26682938.profitableratecpm.com/cd/f9/3e/cdf93eb2f090d829e6f30d4d5c08b7f5.js'></script>
 </body>
 </html>
