--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1><i class="fas fa-calculator"></i> Premium Age Calculator</h1>
         </div>
         <div>
-            <div class="ad-placeholder">
+            <div>
                 <script type="text/javascript">
 	atOptions = {
 		'key' : '5de55c6cd974701786e6b8adb04a6d40',
@@ -77,6 +77,16 @@
                 <h2>About This Calculator</h2>
                 <p>Calculate the exact duration between two dates in multiple formats including years, months, days, weeks, hours, minutes and seconds. Perfect for tracking age, project durations, or any time period calculation. Simply select your dates and get instant results!</p>
             </div>
+	<script type="text/javascript">
+	atOptions = {
+		'key' : 'aaceb10b2a833264a7b050b0a4432a76',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/aaceb10b2a833264a7b050b0a4432a76/invoke.js"></script>
         </main>
 
         <!-- Right sidebar ad -->
