--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <h1><i class="fas fa-calculator"></i> Premium Age Calculator</h1>
         </div>
-        <div>
+        <div class = "ad-placeholder">
             <div>
                 <script type="text/javascript">
 	atOptions = {
